--- a/src/Views/parts/aside.ejs
+++ b/src/Views/parts/aside.ejs
@@ -15,17 +15,31 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">OPCIONES</li>
-        <li class="treeview"><a href="/Dashboard"><i class="fa fa-dashboard"></i> <span>Dashboard</span><span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i>
-            </span>
+        <li class="treeview"><a href="/Dashboard"><i class="fa fa-dashboard"></i> <span>Dashboard</span>
           </a>
         </li>
         <li class="treeview">
           <a href="/Perfil">
+            <i class="fa fa-user-circle-o"></i>
+            <span>Mi Perfil</span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="/listadousuarios">
             <i class="fa fa-files-o"></i>
-            <span>Perfil de Usuario</span>
-            <span class="pull-right-container">
-              <span class="label label-primary pull-right">4</span>
-            </span>
+            <span>Listado de Usuarios</span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="/creareventos">
+            <i class="fa fa-calendar-o"></i>
+            <span>Crear Eventos</span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="/otros">
+            <i class="fa fa-ellipsis-h"></i>
+            <span>Otros</span>
           </a>
         </li>
       </ul>
