--- a/src/Views/parts/head.ejs
+++ b/src/Views/parts/head.ejs
@@ -1,5 +1,8 @@
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<!-- DataTables -->
+<link href="https://cdn.datatables.net/v/bs5/dt-1.13.4/b-2.3.6/b-html5-2.3.6/b-print-2.3.6/date-1.4.1/r-2.4.1/sb-1.4.2/datatables.min.css" rel="stylesheet"/>
+ 
 
 <!-- CUSTOM CSS -->
 <link rel="stylesheet" href="main.css">
